<resources>
    <string name="app_name">MiChayavLemi</string>
    <string name="title_activity_list_events" translatable="false">ListEvents</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_application_id" translatable="false">438015026630700</string>
    <string name="sign_out">Sign Out</string>
    <string name="label_ok">OK</string>
    <string name="new_event_title">Create your event</string>
    <string name="new_item_title">Add new item</string>
    <string name="hint_item_name">Item name</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_price">Price</string>
    <string name="total">Total</string>
    <string name="colon" translatable="false">:</string>
    <string name="average">Average</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="require_transactions">Require Transactions</string>
    <string name="share">Share</string>
    <string name="assign_to">Assign to</string>
    <string name="delete">delete</string>
    <string name="edit_item">Edit</string>
    <string name="new_item_type_permanent">Permanent</string>
    <string name="new_item_isbought">Bought?</string>
    <string name="TIMESTAMP" translatable="false">timestamp</string>
    <string name="Unknown_user" translatable="false">Unknown</string>
    <string name="appbar_scrolling_view_behavior_copy" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior" translatable="false">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="type_event_name">Type Event name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location_event">Location Event</string>
    <string name="_0" translatable="false">0</string>
    <string name="event">Event</string>
    <string name="day">Day</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="expenses">expenses</string>
    <string name="user">User</string>
    <string name="right_arrow" translatable="false"><![CDATA[->]]></string>
    <string name="about">About</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
</resources>
