<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="15dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="10sp"
        android:elevation="2dp"
        android:background="#FFFFFF"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <TextView
            android:id="@+id/textViewEventDay"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_marginStart="260dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="19.14dp"
            android:layout_marginBottom="33.1dp"
            android:text="@string/day"
            android:textColor="@color/textColor"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewEventDate"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="260dp"
            android:layout_marginEnd="12dp"
            android:textColor="@color/textColor"
            android:layout_marginTop="30dp"
            android:text="@string/date"
            android:layout_width="wrap_content"
            android:layout_height="19dp"/>

        <TextView
            android:id="@+id/textViewEventName"
            android:text="@string/event"
            android:textStyle="bold"
            android:layout_marginStart="72.34dp"
            android:layout_marginTop="12.08dp"
            android:textColor="#555759"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/textViewEventLocation"
            android:text="@string/location"
            android:textColor="#8C8C8C"
            android:layout_marginTop="33.64dp"
            android:layout_marginStart="72.34dp"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.cardview.widget.CardView>

</RelativeLayout>