<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_event_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/bottom_sheet_peekHeight"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:background="@android:color/white"
    tools:context="com.roi.greenberg.michayavlemi.activities.EventActivity"
    tools:showIn="@layout/activity_event">

    <RelativeLayout
        android:id="@+id/rv_event_bottom_sheet_summery"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_sheet_peekHeight"
        android:background="@android:color/background_light">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|start"
            android:orientation="horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/colon"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rv_event_bottom_sheet_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:orientation="horizontal"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/colon"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/rv_event_bottom_sheet_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#000000"
                android:textSize="20sp" />

        </LinearLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_event_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </androidx.recyclerview.widget.RecyclerView>


    <Button
        android:id="@+id/bt_require_transactions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/require_transactions" />
</LinearLayout>
